# nice-hand-core

./: .gitignore  CFR_PLUS_UPGRADE.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  EV_CALCULATOR_SUMMARY.md  MCCFR_SUCCESS_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  README.md  STATELESS_API_SUMMARY.md  TOURNAMENT_COMPLETION_SUMMARY.md
examples/: analysis_next_steps.rs  benchmark.rs  blind_structure_optimizer.rs  bubble_strategy_optimization.rs  debug_cfr.rs  debug_cfr_recursion.rs  debug_cfr_trace.rs  debug_holdem  enhanced_tournament_demo.rs  enhancement_summary.rs  ev_calculator_demo.rs  functionality_test.rs  heuristic_demo.rs  heuristic_test.rs  holdem_test.rs  icm_pressure_analysis.rs  icm_pressure_analysis_fixed.rs  mccfr_demo.rs  mccfr_test.rs  mtt_demo_extended.rs  mtt_demo_extended_fixed.rs  performance_benchmark.rs  project_status.rs  simple_api_test.rs  simple_test.rs  test_new_api.rs  tournament_cfr_complete_demo.rs  tournament_cfr_integration.rs  tournament_cfr_integration_fixed.rs  tournament_cfr_with_icm.rs  tournament_demo.rs  tournament_demo_part1.rs  tournament_finish_demo.rs  tournament_integration_simple.rs  tournament_test_functions.rs  web_demo.rs
src/: lib.rs  main.rs
src/api/: analysis.rs  cache.rs  mod.rs  web_api.rs  web_api_simple.rs
src/game/: card_abstraction.rs  hand_eval.rs  holdem.rs  mod.rs  tournament.rs  tournament_holdem.rs
src/solver/: cfr_core.rs  ev_calculator.rs  ev_calculator_tests.rs  mccfr.rs  mod.rs
