[package]
name = "nice-hand-core"
version = "0.1.0"
edition = "2021"

[dependencies]
fxhash = "0.2"
rand = "0.8"
rayon = "1.10"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# WASM 빌드를 위한 의존성 (feature gate)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-rayon = { version = "1.0", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "wasm-bindgen-rayon"]

[lib]
name = "nice_hand_core"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "main"
path = "src/main.rs"

# Examples moved to examples/ directory
[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "heuristic_demo"
path = "examples/heuristic_demo.rs"

[[example]]
name = "mccfr_demo"
path = "examples/mccfr_demo.rs"

[[example]]
name = "web_demo"
path = "examples/web_demo.rs"

[[example]]
name = "debug_cfr_trace"
path = "examples/debug_cfr_trace.rs"

[[example]]
name = "debug_cfr_recursion"
path = "examples/debug_cfr_recursion.rs"
